--- a/index.html
+++ b/index.html
@@ -155,5 +155,18 @@
       link.click(); // Trigger the download
     }
   </script>
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7782866277076875"
+     crossorigin="anonymous"></script>
+<!-- First Square -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7782866277076875"
+     data-ad-slot="4794901414"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 </html>
