--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
 
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7782866277076875"
      crossorigin="anonymous"></script>
-<!-- First Square -->
+<!-- SuperGyan Widget -->
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-7782866277076875"
-     data-ad-slot="4794901414"
+     data-ad-slot="4152291343"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
 <script>
